--- a/src/templates/list-ng.html
+++ b/src/templates/list-ng.html
@@ -55,4 +55,6 @@
             {{/ifvalue}}
 
             {{/each}}
+            <p class="footnote">This article was amended on 27 October 2021 to include a picture of Elise Yarde with her placard. We apologise for this
+        omission in the earlier version.</p>
      </div>
